--- a/home-modern.html
+++ b/home-modern.html
@@ -62,8 +62,8 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item  has-dropdown">
-                <a href="home-modern.html" data-toggle="dropdown" class="dropdown-toggle nav__item-link active">Home</a>
-                <ul class="dropdown-menu">
+                <a href="home-modern.html"  class="nav__item-link active">Home</a>
+                <!-- <ul class="dropdown-menu">
                   <li class="nav__item">
                     <a href="index.html" class="nav__item-link">Home Main</a>
                   </li>
@@ -73,36 +73,11 @@
                   <li class="nav__item">
                     <a href="home-classic.html" class="nav__item-link">Home Classic</a>
                   </li>
-                </ul>
+                </ul> -->
               </li>
+             
               <li class="nav__item  has-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Company</a>
-                <ul class="dropdown-menu">
-                  <li class="nav__item">
-                    <a href="about-us.html" class="nav__item-link">About Us</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="why-us.html" class="nav__item-link">Why Choose Us</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="leadership-team.html" class="nav__item-link">Leadership Team</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="awards.html" class="nav__item-link">Award & Recognition</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="pricing.html" class="nav__item-link">Pricing & Plans</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="faqs.html" class="nav__item-link">Help & FAQs</a>
-                  </li> 
-                  <li class="nav__item">
-                    <a href="careers.html" class="nav__item-link">Careers</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav__item  has-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">IT Solutions</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Services</a>
                 <ul class="dropdown-menu wide-dropdown-menu">
                   <li class="nav__item">
                     <div class="row mx-0">
@@ -157,7 +132,33 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav__item  has-dropdown">
+              <li class="nav__item">
+                <a href="about-us.html" class="nav__item-link">About Us</a>
+                <!-- <ul class="dropdown-menu">
+                  <li class="nav__item">
+                    <a href="about-us.html" class="nav__item-link">About Us</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="why-us.html" class="nav__item-link">Why Choose Us</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="leadership-team.html" class="nav__item-link">Leadership Team</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="awards.html" class="nav__item-link">Award & Recognition</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="pricing.html" class="nav__item-link">Pricing & Plans</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="faqs.html" class="nav__item-link">Help & FAQs</a>
+                  </li> 
+                  <li class="nav__item">
+                    <a href="careers.html" class="nav__item-link">Careers</a>
+                  </li>
+                </ul> -->
+              </li>
+              <!-- <li class="nav__item  has-dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">News&Media</a>
                 <ul class="dropdown-menu">
                   <li class="nav__item">
@@ -196,9 +197,15 @@
                     <a href="#" class="nav__item-link  open-login-popup">Login</a>
                   </li>
                 </ul>
+              </li> -->
+              <li class="nav__item">
+                <a href="contact-us.html" class="nav__item-link">Contact Us</a>
               </li>
               <li class="nav__item">
-                <a href="contact-us.html" class="nav__item-link">Contacts</a>
+                <a href="leadership-team.html" class="nav__item-link">Our Team</a>
+              </li>
+              <li class="nav__item">
+                <a href="leadership-team.html" class="nav__item-link">Franchise</a>
               </li>
             </ul><!-- /.navbar-nav -->
           </div><!-- /.navbar-collapse -->
@@ -230,13 +237,13 @@
                     changing, and are true partners who care about your success.</p>
                   <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
-                    <a class="video__btn video__btn-rounded video__btn-white popup-video"
+                    <!-- <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
                       <div class="video__player">
                         <i class="fa fa-play"></i>
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
-                    </a>
+                    </a> -->
                   </div>
                 </div><!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
@@ -434,7 +441,7 @@
                   </div>
                 </div><!-- /.feature-item -->
                 <!-- Feature item #5 -->
-                <div class="feature-item">
+                <!-- <div class="feature-item">
                   <div class="feature__upper">
                     <div class="feature__icon">
                       <i class="icon-dos"></i>
@@ -447,9 +454,10 @@
                       delivery
                       areas.</p>
                   </div>
-                </div><!-- /.feature-item -->
+                </div> -->
+                <!-- /.feature-item -->
                 <!-- Feature item #6 -->
-                <div class="feature-item">
+                <!-- <div class="feature-item">
                   <div class="feature__upper">
                     <div class="feature__icon">
                       <i class="icon-operating-system"></i>
@@ -461,7 +469,8 @@
                     <p class="feature__desc">Build dynamic request templates with associated workflows, and tasks.
                     </p>
                   </div>
-                </div><!-- /.feature-item -->
+                </div> -->
+                <!-- /.feature-item -->
               </div><!-- /.carousel-->
             </div><!-- /.features-wrapper -->
           </div><!-- /.col-12 -->
