--- a/case-studies-grid.html
+++ b/case-studies-grid.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
 
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home-modern.html">
             <img src="assets/images/logo/logo-light.png" class="logo-light" alt="logo">
             <img src="assets/images/logo/logo-dark.png" class="logo-dark" alt="logo">
           </a>
@@ -49,10 +49,10 @@
           <div class="collapse navbar-collapse" id="mainNavigation">
             <ul class="navbar-nav ml-auto">
               <li class="nav__item  has-dropdown">
-                <a href="index.html" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Home</a>
+                <a href="home-modern.html" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Home</a>
                 <ul class="dropdown-menu">
                   <li class="nav__item">
-                    <a href="index.html" class="nav__item-link">Home Main</a>
+                    <a href="home-modern.html" class="nav__item-link">Home Main</a>
                   </li><!-- /.nav-item -->
                   <li class="nav__item">
                     <a href="home-modern.html" class="nav__item-link">Home Modern</a>
@@ -217,7 +217,7 @@
             </p>
             <nav>
               <ol class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="home-modern.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="about-us.html">Company</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Awards</li>
               </ol>
