--- a/home-modern.html
+++ b/home-modern.html
@@ -856,14 +856,14 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-40">
-              <h2 class="heading__subtitle">Satisfied Users Over The Globe</h2>
+              <h2 class="heading__subtitle">FPO Model Farm</h2>
               <h3 class="heading__title">Success Stories</h3>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         <div class="row">
           <div class="col-12">
-            <img src="assets/images/backgrounds/map.png" alt="map">
+            <img src="assets/images/backgrounds/fpo.jpg" alt="map">
             <!-- Testimonial #1 -->
             <div class="testimonial-box">
               <div class="testimonial__thumb">
