submenu of service

--- a/home-modern.html
+++ b/home-modern.html
@@ -81,30 +81,21 @@
                 <ul class="dropdown-menu wide-dropdown-menu">
                   <li class="nav__item">
                     <div class="row mx-0">
-                      <div class="col-sm-6 dropdown-menu-col">
-                        <a href="it-solutions.html" class="nav__item-link dropdown-menu-title">IT Solutions</a>
+                      <div class="col-sm-12 dropdown-menu-col">
+                        <!-- <a href="it-solutions.html" class="nav__item-link dropdown-menu-title">IT Solutions</a> -->
                         <ul class="nav flex-column">
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">IT
-                              Management</a>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Bamboo Plantation</a>
                           </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Cyber
-                              Security</a>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">ABC Retreat</a>
                           </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Cloud
-                              Computing</a>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Industrial Park</a>
                           </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">IT
-                              Consulting</a>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Kishan Pathshala</a>
                           </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Software
-                              Dev</a>
-                          </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">IT Support</a>
-                          </li>
                           
                         </ul>
                       </div><!-- /.col-sm-6 -->
-                      <div class="col-sm-6 dropdown-menu-col">
+                      <!-- <div class="col-sm-6 dropdown-menu-col">
                         <a href="industries.html" class="nav__item-link dropdown-menu-title">Industries</a>
                         <ul class="nav flex-column">
                           <li class="nav__item"><a class="nav__item-link"
@@ -127,7 +118,8 @@
                           </li>
                           
                         </ul>
-                      </div><!-- /.col-sm-6 -->
+                      </div> -->
+                      <!-- /.col-sm-6 -->
                     </div><!-- /.row -->
                   </li>
                 </ul>
