--- a/home-modern.html
+++ b/home-modern.html
@@ -84,7 +84,6 @@
                       <div class="col-sm-12 dropdown-menu-col">
                         <!-- <a href="it-solutions.html" class="nav__item-link dropdown-menu-title">IT Solutions</a> -->
                         <ul class="nav flex-column">
-<<<<<<< HEAD
                           <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Bamboo Plantation</a>
                           </li> 
                           <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">ABC Retreat</a>
@@ -94,26 +93,6 @@
                           <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Kishan Pathshala</a>
                           </li> 
                           
-=======
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">IT
-                              Management</a>
-                          </li>
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Cyber
-                              Security</a>
-                          </li>
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Cloud
-                              Computing</a>
-                          </li>
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">IT
-                              Consulting</a>
-                          </li>
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Software
-                              Dev</a>
-                          </li>
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">IT Support</a>
-                          </li>
-
->>>>>>> c2299176efa577dc46e795e17fb1dbed09075ecd
                         </ul>
                       </div><!-- /.col-sm-6 -->
                       <!-- <div class="col-sm-6 dropdown-menu-col">
@@ -870,7 +849,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-40">
               <h2 class="heading__subtitle">FPO Model Farm</h2>
-              <h3 class="heading__title">Success Stories</h3>
+              <h3 class="heading__title">Farmer Producer Organization</h3>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
@@ -970,7 +949,7 @@
                   and meet your needs.</p>
               </div><!-- /.cta__content -->
             </div><!-- /.cta__item -->
-            <div class="or-seperator">or</div>
+            <div class="or-seperator">and</div>
             <div class="cta__item d-flex align-items-center">
               <div class="cta__content text-right">
                 <h4 class="cta__title">Enterprise Level Organization</h4>
