--- a/home-modern.html
+++ b/home-modern.html
@@ -273,7 +273,7 @@
            Banner layout 3
     =========================== -->
     <section class="banner-layout3 pb-70">
-      <div class="bg-img"><img src="assets/images/backgrounds/1.jpg" alt="background"></div>
+      <!-- <div class="bg-img"><img src="assets/images/backgrounds/1.jpg" alt="background"></div> -->
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 fancybox-light">
@@ -285,12 +285,12 @@
             </div><!-- /.heading -->
             <div class="position-relative offset-xl-1" >
               <i class="icon-quote"></i>
-              <p class="mb-40" style="color:white !important">
+              <p class="mb-40" style="color:black !important">
                 Our Goal is To Provide Healthy Food and Supplimentry direct thru farm to plate (farm to home).
               </p>
               <ul class="list-items list-items-layout2 list-unstyled d-flex flex-wrap list-horizontal mb-50" >
-                <li style="color:white !important">Eliminate Repeat Entry</li>
-                <li style="color:white !important">Simplify Communication</li>
+                <li style="color:black !important">Eliminate Repeat Entry</li>
+                <li style="color:black !important">Simplify Communication</li>
               
               </ul>
               <img src="assets/images/about/100_round.png" alt="singnture">
@@ -315,7 +315,7 @@
                   <i class="fas fa-star color-primary"></i>
                   <i class="fas fa-star color-primary"></i>
                 </div> -->
-                <p class="read-note__text color-white">
+                <p class="read-note__text color-dark">
                   <span class="font-weight-bold text-underlined">One Step Towards Nature</span>
                 </p>
               </div>
@@ -501,51 +501,6 @@
                 </div><!-- /.service-content -->
               </div><!-- /.service-item -->
               <!-- service item #4 -->
-              <div class="service-item">
-                <div class="service__content">
-                  <div class="service__icon">
-                    <i class="icon-permission"></i>
-                  </div><!-- /.service__icon -->
-                  <h4 class="service__title">IT Consulting <br> Services</h4>
-                  <p class="service__desc">TTrying to solve all your IT challenges internally can become costly and
-                    a
-                    major distraction, Leveraging knowledgeable IT consulting firms like ushelps business. </p>
-                  <a href="it-solutions-single.html" class="btn btn__secondary">
-                    <span>Read More</span>
-                    <i class="icon-arrow-right"></i>
-                  </a>
-                </div><!-- /.service-content -->
-              </div><!-- /.service-item -->
-              <!-- service item #5 -->
-              <div class="service-item">
-                <div class="service__content">
-                  <div class="service__icon">
-                    <i class="icon-code"></i>
-                  </div><!-- /.service__icon -->
-                  <h4 class="service__title">Software Dev<br> Services</h4>
-                  <p class="service__desc">With shorter product cycles, innovation, and mergers contributing to
-                    constant change, you are faced making business decisions every day to advance.</p>
-                  <a href="it-solutions-single.html" class="btn btn__secondary">
-                    <span>Read More</span>
-                    <i class="icon-arrow-right"></i>
-                  </a>
-                </div><!-- /.service-content -->
-              </div><!-- /.service-item -->
-              <!-- service item #6 -->
-              <div class="service-item">
-                <div class="service__content">
-                  <div class="service__icon">
-                    <i class="icon-internet"></i>
-                  </div><!-- /.service__icon -->
-                  <h4 class="service__title">Backup & Recovery<br> Services</h4>
-                  <p class="service__desc">While you can’t predict unexpected events, we’ll ensure the right
-                    precautions are in place to minimize downtime and keep you moving in the right direction.</p>
-                  <a href="it-solutions-single.html" class="btn btn__secondary">
-                    <span>Read More</span>
-                    <i class="icon-arrow-right"></i>
-                  </a>
-                </div><!-- /.service-content -->
-              </div><!-- /.service-item -->
             </div><!-- /.carousel -->
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
