--- a/home-modern.html
+++ b/home-modern.html
@@ -84,15 +84,19 @@
                       <div class="col-sm-12 dropdown-menu-col">
                         <!-- <a href="it-solutions.html" class="nav__item-link dropdown-menu-title">IT Solutions</a> -->
                         <ul class="nav flex-column">
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Bamboo Plantation</a>
-                          </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">ABC Retreat</a>
-                          </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Industrial Park</a>
-                          </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Kishan Pathshala</a>
-                          </li> 
-                          
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Bamboo
+                              Plantation</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">ABC
+                              Retreat</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Industrial
+                              Park</a>
+                          </li>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Kishan
+                              Pathshala</a>
+                          </li>
+
                         </ul>
                       </div><!-- /.col-sm-6 -->
                       <!-- <div class="col-sm-6 dropdown-menu-col">
@@ -283,16 +287,19 @@
                 system.
               </p>
             </div><!-- /.heading -->
-            <div class="position-relative offset-xl-1" >
+            <div class="position-relative offset-xl-1">
               <i class="icon-quote"></i>
               <p class="mb-40" style="color:white !important">
-                Our Goal is To Provide Healthy Food and Supplimentry direct thru farm to plate (farm to home).
+                A trident initiative with Plantation & Forestry, Retreat & Wellness, and Industrial Park. A Self
+                Sustainable Environment & Economy (S2E2) where all components shall be modeled as Self or Help
+                Programmes. Oxygen Purodhyan is aimed to be self-sustaining, and eco-friendly and is expected to
+                contribute greatly to the preservation of the ecosystem and native Indian concepts of well-being.
               </p>
-              <ul class="list-items list-items-layout2 list-unstyled d-flex flex-wrap list-horizontal mb-50" >
+              <!-- <ul class="list-items list-items-layout2 list-unstyled d-flex flex-wrap list-horizontal mb-50">
                 <li style="color:white !important">Eliminate Repeat Entry</li>
                 <li style="color:white !important">Simplify Communication</li>
-              
-              </ul>
+
+              </ul> -->
               <img src="assets/images/about/100_round.png" alt="singnture">
             </div>
 
