--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
                           </li> 
                           <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Industrial Park</a>
                           </li> 
-                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Kishan Pathshala</a>
+                          <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Kissan Pathshala</a>
                           </li> 
                           
                         </ul>
