--- a/home-modern.html
+++ b/home-modern.html
@@ -285,7 +285,7 @@
             <div class="position-relative offset-xl-1">
               <i class="icon-quote"></i>
               <p class="mb-40" style="color:black !important">
-                Our Goal is To Provide Healthy Food and Supplimentry direct thru farm to plate (farm to home).
+                Our Goal is To Provide Healthy Food and Supplimentry direct through farm to plate (farm to home). <br>
                 A trident initiative with Plantation & Forestry, Retreat & Wellness, and Industrial Park. A Self
                 Sustainable Environment & Economy (S2E2) where all components shall be modeled as Self or Help
                 Programmes. Oxygen Purodhyan is aimed to be self-sustaining, and eco-friendly and is expected to
@@ -574,7 +574,7 @@
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         <div class="row">
-          <div class="col-12">
+          <div class="col-12" style="text-align: center;">
             <img src="assets/images/backgrounds/fpo.jpg" alt="map">
             <!-- Testimonial #1 -->
             <div class="testimonial-box">
