--- a/home-modern.html
+++ b/home-modern.html
@@ -575,9 +575,9 @@
         </div><!-- /.row -->
         <div class="row">
           <div class="col-12" style="text-align: center;">
-            <img src="assets/images/backgrounds/fpo.jpg" alt="map">
+            <img src="assets/images/backgrounds/map.png" alt="map">
             <!-- Testimonial #1 -->
-            <div class="testimonial-box">
+            <div class="testimonial-box" hidden>
               <div class="testimonial__thumb">
                 <img src="assets/images/testimonials/thumbs/1.png" alt="author thumb">
                 <span class="pulsing-animation pulsing-animation-1"></span>
@@ -592,7 +592,7 @@
               </div><!-- /.testimonial-panel -->
             </div><!-- /. testimonial-box -->
             <!-- Testimonial #2 -->
-            <div class="testimonial-box">
+            <div class="testimonial-box" hidden>
               <div class="testimonial__thumb">
                 <img src="assets/images/testimonials/thumbs/2.png" alt="author thumb">
                 <span class="pulsing-animation pulsing-animation-1"></span>
@@ -616,13 +616,12 @@
               </div><!-- /.testimonial-thumb -->
               <div class="testimonial__panel">
                 <div class="testimonial__desc">
-                  As one of the world's largest ITService Providers with over 120 engineers and IT support staff are
-                  ready to help.
+                  The beginning of a eco-friendly world !
                 </div>
               </div><!-- /.testimonial-panel -->
             </div><!-- /. testimonial-box -->
             <!-- Testimonial #4 -->
-            <div class="testimonial-box testimonial-hover-left">
+            <div class="testimonial-box testimonial-hover-left" hidden>
               <div class="testimonial__thumb">
                 <img src="assets/images/testimonials/thumbs/4.png" alt="author thumb">
                 <span class="pulsing-animation pulsing-animation-1"></span>
@@ -637,7 +636,7 @@
               </div><!-- /.testimonial-panel -->
             </div><!-- /. testimonial-box -->
             <!-- Testimonial #5 -->
-            <div class="testimonial-box testimonial-hover-left">
+            <div class="testimonial-box testimonial-hover-left" hidden>
               <div class="testimonial__thumb">
                 <img src="assets/images/testimonials/thumbs/5.png" alt="author thumb">
                 <span class="pulsing-animation pulsing-animation-1"></span>
