--- a/home-modern.html
+++ b/home-modern.html
@@ -222,22 +222,23 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <div class="slide__content">
+                <!-- <div class="slide__content">
                   <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
                   <h2 class="slide__title">Help Challenge Critical Activities</h2>
                   <p class="slide__desc">We are experienced professionals who understand that It services is
                     changing, and are true partners who care about your success.</p>
                   <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
-                    <!-- <a class="video__btn video__btn-rounded video__btn-white popup-video"
+                    <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
                       <div class="video__player">
                         <i class="fa fa-play"></i>
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
-                    </a> -->
+                    </a>
                   </div>
-                </div><!-- /.slide-content -->
+                </div> -->
+                <!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
           </div><!-- /.container -->
@@ -247,22 +248,75 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <div class="slide__content">
+                <!-- <div class="slide__content">
                   <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
                   <h2 class="slide__title">Simple, Intuitive & Expertly Crafted!</h2>
                   <p class="slide__desc">We are experienced professionals who understand that It services is
                     changing, and are true partners who care about your success.</p>
                   <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
-                    <!-- <a class="video__btn video__btn-rounded video__btn-white popup-video"
+                    <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
                       <div class="video__player">
                         <i class="fa fa-play"></i>
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
-                    </a> -->
+                    </a>
                   </div>
-                </div><!-- /.slide-content -->
+                </div> -->
+                <!-- /.slide-content -->
+              </div><!-- /.col-xl-7 -->
+            </div><!-- /.row -->
+          </div><!-- /.container -->
+        </div><!-- /.slide-item -->
+        <div class="slide-item align-v-h bg-overlay">
+          <div class="bg-img"><img src="assets/images/sliders/5.jpg" alt="slide img"></div>
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
+                <!-- <div class="slide__content">
+                  <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
+                  <h2 class="slide__title">Simple, Intuitive & Expertly Crafted!</h2>
+                  <p class="slide__desc">We are experienced professionals who understand that It services is
+                    changing, and are true partners who care about your success.</p>
+                  <div class="d-flex align-items-center">
+                    <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
+                    <a class="video__btn video__btn-rounded video__btn-white popup-video"
+                      href="https://www.youtube.com/watch?v=nrJtHemSPW4">
+                      <div class="video__player">
+                        <i class="fa fa-play"></i>
+                      </div>
+                      <span class="video__btn-title color-white">Our Video!</span>
+                    </a>
+                  </div>
+                </div> -->
+                <!-- /.slide-content -->
+              </div><!-- /.col-xl-7 -->
+            </div><!-- /.row -->
+          </div><!-- /.container -->
+        </div><!-- /.slide-item -->
+        <div class="slide-item align-v-h bg-overlay">
+          <div class="bg-img"><img src="assets/images/sliders/6.jpg" alt="slide img"></div>
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
+                <!-- <div class="slide__content">
+                  <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
+                  <h2 class="slide__title">Simple, Intuitive & Expertly Crafted!</h2>
+                  <p class="slide__desc">We are experienced professionals who understand that It services is
+                    changing, and are true partners who care about your success.</p>
+                  <div class="d-flex align-items-center">
+                    <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
+                    <a class="video__btn video__btn-rounded video__btn-white popup-video"
+                      href="https://www.youtube.com/watch?v=nrJtHemSPW4">
+                      <div class="video__player">
+                        <i class="fa fa-play"></i>
+                      </div>
+                      <span class="video__btn-title color-white">Our Video!</span>
+                    </a>
+                  </div>
+                </div> -->
+                <!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
           </div><!-- /.container -->
@@ -680,11 +734,11 @@
               </div><!-- /.cta__icon -->
             </div><!-- /.cta__item -->
           </div><!-- /.cta -->
-          <p class="text__link text-center mt-40 mb-0">IT Management Solutions for your Business,
+          <!-- <p class="text__link text-center mt-40 mb-0">IT Management Solutions for your Business,
             <a href="#" class="btn btn__link btn__secondary btn__icon px-0">
               <span>Explore Our Plans</span> <i class="icon-arrow-right"></i>
             </a>
-          </p>
+          </p> -->
         </div><!-- /.container -->
       </div>
     </section><!-- /.testimonials -->
@@ -953,35 +1007,32 @@
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-3 footer-widget footer-widget-about">
               <div class="footer-widget__content">
-                <img src="assets/images/logo/logo-light.png" alt="logo" class="mb-30">
+                <img src="assets/images/logo/logo-dark1.png" alt="logo" class="mb-30">
+                <p style="color: white;"> <span style="font-size: 20px; color:white; font-weight: 600;">UNITY MAKES</span>  <br> Strength of success</p>
               </div><!-- /.footer-widget__content -->
             </div><!-- /.col-xl-3 -->
             <div class="col-sm-6 col-md-4 col-lg-2 footer-widget footer-widget-nav">
-              <h6 class="footer-widget__title">Company</h6>
+              <h6 class="footer-widget__title">Services</h6>
               <div class="footer-widget__content">
                 <nav>
                   <ul class="list-unstyled">
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="leadership-team.html">Meet Our Team</a></li>
-                    <li><a href="blog.html">News & Media</a></li>
-                    <li><a href="projects-grid.html">Case Studies</a></li>
-                    <li><a href="contact-us.html">Contacts</a></li>
-                    <li><a href="#">Investors</a></li>
+                    <li><a href="about-us.html">Bamboo Plantation</a></li>
+                    <li><a href="leadership-team.html">ABC Retreat</a></li>
+                    <li><a href="blog.html">Industrial Park</a></li>
+                    <li><a href="projects-grid.html">Kissan Pathshala</a></li>
                   </ul>
                 </nav>
               </div><!-- /.footer-widget__content -->
             </div><!-- /.col-lg-2 -->
             <div class="col-sm-6 col-md-4 col-lg-2 footer-widget footer-widget-nav">
-              <h6 class="footer-widget__title">Solutions</h6>
+              <h6 class="footer-widget__title">Useful Links</h6>
               <div class="footer-widget__content">
                 <nav>
                   <ul class="list-unstyled">
-                    <li><a href="#">IT Management</a></li>
-                    <li><a href="#">Cyber Security</a></li>
-                    <li><a href="#">Cloud Computing</a></li>
-                    <li><a href="#">IT Consulting</a></li>
-                    <li><a href="#">Software Dev</a></li>
-                    <li><a href="#">IT Support</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Our Team</a></li>
                   </ul>
                 </nav>
               </div><!-- /.footer-widget__content -->
@@ -1023,7 +1074,7 @@
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-5">
               <div class="footer__copyrights">
-                <span class="fz-14">&copy; 2020 Smart Data, All Rights Reserved. With Love by</span>
+                <span class="fz-14">&copy; 2022 Oxygen Park, All Rights Reserved. Develop by <a href="https://keryar.com/" style="color: black; font-weight:600;">KERYAR</a> </span>
                 <a class="fz-14 color-primary" href="http://themeforest.net/user/7oroof">7oroof.com</a>
               </div>
             </div><!-- /.col-lg-6 -->
@@ -1036,7 +1087,7 @@
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               </ul><!-- /.social-icons -->
-              <div>
+              <!-- <div>
                 <a href="#" class="btn btn__white btn__download mr-20">
                   <i class="fab fa-apple"></i>
                   <span>App Store</span>
@@ -1045,7 +1096,7 @@
                   <i class="fab fa-google-play"></i>
                   <span>Google Play</span>
                 </a>
-              </div>
+              </div> -->
             </div><!-- /.col-lg-6 -->
           </div><!-- /.row -->
         </div><!-- /.container -->
